tests/cases/modules/errors/unknown-imported-symbol.ari
mod Api {
  pub fn value() -> i64 {
    return 1;
  }
}

use Api::missing as missing

fn main() -> i64 {
  return missing();
}
